improved UI overflow issues

--- a/client/src/components/Studysession/studysession.module.css
+++ b/client/src/components/Studysession/studysession.module.css
@@ -1,8 +1,5 @@
 .stusessionwrap{
-    /* display: flex;
-    flex-direction: column; */
-    /* width: 96vw; */
-    /* height: 100vw; */
+    height: 100vw;
     /* margin: 7vh 0 0 4vw; */
     background: #FFF1DC;
 }
@@ -40,7 +37,14 @@
     margin: 10px 10px;
     border-radius: 10px;
     box-shadow: rgba(30, 29, 29, 0.334) 0px 5px 5px;
+    color: black;
+    text-decoration: none;
+    transition: all 0.5s;
 }
+.joinbox:hover{
+    box-shadow: rgba(30, 29, 29, 0.334) 5px 10px 5px;
+}
+
 .righthalf{
     width: 46vw;
     height: 80%;
